# stock-quant-oop

./: .gitignore  PIPELINE_WALKTHROUGH.txt  README.md  README_DEV.md  pyproject.toml
cli/: backtest_sentiment_signal.py  bootstrap_full_price_history.py  build_finra_short_interest.py  build_market_universe.py  build_news_features_daily.py  build_news_features_daily_llm.py  build_news_llm_enrichment.py  build_news_raw.py  build_news_symbol_candidates.py  build_prices.py  build_symbol_reference.py  export_market_features_daily_csv.py  fetch_price_source_daily_raw_yahoo.py  filter_price_source_daily_raw_from_all.py  init_market_db.py  init_news_llm_tables.py  load_finra_short_interest_source_raw.py  load_news_source_raw.py  load_news_source_raw_csv.py  load_price_source_daily_raw.py  load_price_source_daily_raw_all_from_csv.py  load_price_source_daily_raw_all_from_stooq_dir.py  load_price_source_daily_raw_all_from_stooq_zip.py  load_price_source_daily_raw_from_stooq_zip.py  load_price_source_daily_raw_yahoo_csv.py  load_symbol_reference_source_raw.py  pipeline_status.py  rebuild_price_source_daily_raw_effective.py  run_core_pipeline.py  run_daily_pipeline.py  run_news_daily_refresh.py  run_price_daily_refresh.py  seed_initial_db.py
docs/: ARCHITECTURE.md  BACKTEST_ENGINE_V1.md  DATASET_BUILDER.md  DATASET_VERSIONING.md  DATA_PIPELINE_PATTERN.md  DB_REBUILD.md  FUNDAMENTALS_PIPELINE.md  MODULAR_FEATURE_ARCHITECTURE.md  PIPELINE_USAGE.md  PRICE_PIPELINE.md  QUICKSTART.md  RESEARCH_DATASET_DAILY.md  RESEARCH_PIPELINE_IMPLEMENTATION.md  RUNBOOK_RESEARCH_PIPELINE.md
(+504 files in other folders)
